// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render InputRadioNumber InputRadioNumber with "over max" option 1`] = `
<div
  className="survey-question__input-radio-group-container"
>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-radio"
        id="test_1"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={1}
      />
      <label
        htmlFor="test_1"
      >
        <span>
          1
        </span>
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-radio"
        id="test_2"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={2}
      />
      <label
        htmlFor="test_2"
      >
        <span>
          2
        </span>
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-radio"
        id="test_3"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={3}
      />
      <label
        htmlFor="test_3"
      >
        <span>
          3
        </span>
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-radio"
        id="test_4"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={4}
      />
      <label
        htmlFor="test_4"
      >
        4+
      </label>
    </div>
  </div>
</div>
`;

exports[`Render InputRadioNumber InputRadioNumber with selected value 1`] = `
<div
  className="survey-question__input-radio-group-container"
>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-radio"
        id="test_1"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={1}
      />
      <label
        htmlFor="test_1"
      >
        <span>
          1
        </span>
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-radio"
        id="test_2"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={2}
      />
      <label
        htmlFor="test_2"
      >
        <span>
          2
        </span>
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-radio"
        id="test_3"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={3}
      />
      <label
        htmlFor="test_3"
      >
        <span>
          3
        </span>
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={true}
        className="input-radio"
        id="test_4"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={4}
      />
      <label
        htmlFor="test_4"
      >
        4+
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "gap": "1rem",
      }
    }
  >
    <label
      htmlFor="testover-max"
    >
      <span>
        SpecifyAboveLimit:
      </span>
    </label>
    <input
      className="apptr__form-input apptr__input-string input-large"
      defaultValue={4}
      id="testover-max"
      min={4}
      name="testover-max"
      onBlur={[Function]}
      onMouseUp={[Function]}
      pattern="[0-9]*"
      style={
        Object {
          "width": "6rem",
        }
      }
      type="number"
    />
  </div>
</div>
`;

exports[`Render InputRadioNumber InputRadioNumber without "over max" option 1`] = `
<div
  className="survey-question__input-radio-group-container"
>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-radio"
        id="test_1"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={1}
      />
      <label
        htmlFor="test_1"
      >
        <span>
          1
        </span>
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-radio"
        id="test_2"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={2}
      />
      <label
        htmlFor="test_2"
      >
        <span>
          2
        </span>
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-radio-input-container"
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-radio"
        id="test_3"
        name="inputChoice_test"
        onChange={[Function]}
        type="radio"
        value={3}
      />
      <label
        htmlFor="test_3"
      >
        <span>
          3
        </span>
      </label>
    </div>
  </div>
</div>
`;
